--- a/src/main/resources/templates/buzz/buzz.html
+++ b/src/main/resources/templates/buzz/buzz.html
@@ -5,43 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>BUZZ</title>
-    <style>
-        body {
-            background-image: url('/images/buzz.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-        }
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 20px;
-            gap: 20px;
-        }
-
-        .card {
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 10px;
-            text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(10px); /* Optional: Add blur effect for a more modern look */
-        }
-
-        .recent-purchases h2, .total-tickets h2 {
-            text-align: center;
-            color: #4a69bd;
-        }
-        footer {
-            background-color: #4a69bd;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-lg nav-dark" style="background-color: #3f48cc">
@@ -66,22 +30,33 @@
     <br>
     <br>
     <br>
-    <div class="container d-flex justify-content-center align-items-center mb-2 my-5">
-        <div class="card p-4 w-100">
-            <div class="d-flex flex-row justify-content-center align-items-center">
-                <input type="text" class="form-control me-2" placeholder="Звідки" id="search-text" >
-                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
-                </svg>
-                <input type="text" class="form-control me-2" placeholder="Куди" id="search-text-city" >
-
-                <input type="date" class="form-control me-2" name="timeToGos" id="dateToGos">
-                <button type="button" class="btn btn-primary" style="color: white;">Знайти</button>
+    <form th:action="@{/buzz/trains}" th:object="${findTrain}" method="Get">
+        <div class="container my-5">
+            <div class="card p-4 w-75">
+                <div class="d-flex justify-content-between align-items-center" >
+                    <h1 class="text-center w-100" style="color: #3f48cc">Замовлення залізничних квитків</h1>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="search-container me-2">
+                        <input type="text" class="form-control" autocomplete="off" th:field="*{pointVid}" placeholder="Звідки" id="searchInputVid" oninput="searchVid()" required/>
+                        <ul id="searchResultsVid"></ul>
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+                    </svg>
+                    <div class="search-container me-2">
+                        <input type="text" class="form-control" autocomplete="off" th:field="*{pointDo}" placeholder="Куди" id="searchInputDo" oninput="searchDo()" required/>
+                        <ul id="searchResultsDo"></ul>
+                    </div>
+                    <input type="date" class="form-control" autocomplete="off" th:field="*{date}" name="timeToGos" id="dateToGos" th:min="${minDate}" th:max="${maxDate}" required/>
+                    <button type="submit" class="btn btn-primary">Знайти</button>
+                </div>
             </div>
         </div>
-    </div>
+    </form>
     <br>
     <br>
+
     <div class="container d-flex justify-content-center align-items-center mb-2 my-5">
         <div class="recent-purchases card">
             <h2>Щойно придбали</h2>
@@ -110,6 +85,7 @@
             <a style="color: white">Контакт центр "Якість та сервіс": 0 (800) 503-111</a>
         </div>
     </nav>
+    <script src="/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
